update prod build

--- a/apps/angular-spotify/project.json
+++ b/apps/angular-spotify/project.json
@@ -59,6 +59,7 @@
           "namedChunks": false,
           "extractLicenses": true,
           "vendorChunk": false,
+          "baseHref": "meticulous-demo",
           "buildOptimizer": true,
           "budgets": [
             {
