--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main && husky install",
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx build",
+    "build": "nx build -c=production",
     "build:prod": "cross-env NODE_ENV=production nx build --prod",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
