--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,3 @@
-# For details on how to setup this workflow see:
-# https://phaserquick.philscode.com/starter-project/github-pages
-
 name: Pages Deployment 🚀
 
 on:
@@ -27,7 +24,7 @@ jobs:
       - name: 🔄 Checkout
         uses: actions/checkout@v3
       - name: 📦 Install Dependencies
-        run: npm ci
+        run: npm install --force --legacy-peer-deps
       - name: 🔧 Build Project
         run: npm run build
       - name: 📄 Setup Pages
